# Uno

./: CMakeLists.txt  COLOR.h  main.cpp
resources/: brute  brute-force.c
resources/decks/: deck_10_1.txt  deck_11_1.txt  deck_14_1.txt  deck_15_1.txt  deck_16_0.txt  deck_17_0.txt  deck_18_1.txt  deck_1_1.txt  deck_21_1.txt  deck_22_0.txt  deck_24_0.txt  deck_25_1.txt  deck_27_1.txt  deck_28_1.txt  deck_2_0.txt  deck_30_1.txt  deck_33_0.txt  deck_35_0.txt  deck_38_1.txt  deck_39_0.txt  deck_5_0.txt  deck_6_1.txt
resources/tmp/: deck_12_0.txt  deck_13_0.txt  deck_19_1.txt  deck_20_0.txt  deck_23_0.txt  deck_26_0.txt  deck_29_1.txt  deck_31_0.txt  deck_32_0.txt  deck_34_1.txt  deck_36_1.txt  deck_37_0.txt  deck_3_0.txt  deck_4_0.txt  deck_7_1.txt  deck_8_1.txt  deck_9_0.txt
results/: brute.txt
results/potatoes/: deck_10_0.txt  deck_10_1.txt  deck_11_0.txt  deck_11_1.txt  deck_12_0.txt  deck_12_1.txt  deck_13_0.txt  deck_13_1.txt  deck_14_0.txt  deck_15_0.txt  deck_15_1.txt  deck_16_0.txt  deck_16_1.txt  deck_17_0.txt  deck_17_1.txt  deck_18_0.txt  deck_18_1.txt  deck_19_0.txt  deck_19_1.txt  deck_1_0.txt  deck_20_0.txt  deck_20_1.txt  deck_21_1.txt  deck_22_0.txt  deck_22_1.txt  deck_23_0.txt  deck_23_1.txt  deck_24_0.txt  deck_24_1.txt  deck_25_0.txt  deck_25_1.txt  deck_26_0.txt  deck_26_1.txt  deck_27_0.txt  deck_27_1.txt  deck_28_0.txt  deck_28_1.txt  deck_29_0.txt  deck_29_1.txt  deck_2_0.txt  (+33 more)
src/builder/: BuilderCard.h  BuilderPotatoes.h  DrawingBuilderPotatoes.cpp  DrawingBuilderPotatoes.h  GraphBuilder.cpp  GraphBuilder.h
src/cards/: Card.cpp  Card.h  (+2 more)
(+19 files in other folders)
